# magic-formula-b3

./: .gitignore  README.md  pyproject.toml
data/: 2022-03-26_fundamentus.csv  2022-03-26_status_invest.csv
src/: api.py  magic_formula.py  main.py  stock.py  storage.py
